@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-08-18 r63609) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-10-24 r64106) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: i686-pc-linux-gnu (32-bit)
 
@@ -28,7 +28,6 @@ Loading required package: stats4
 +                minuslogl=y~dpois(lambda=ymax/(1+x/xhalf)),
 +                start=list(ymax=15,xhalf=6),data=d,
 +                method="Nelder-Mead")) ## 'method' is ignored by nlm()/nlminb()
-> 
 > 
 > sapply(fits,coef)
        [,1]  [,2]  [,3]
@@ -60,4 +59,4 @@ Log-likelihood: -28.6
 > 
 > proc.time()
    user  system elapsed 
-  0.536   0.848   2.784 
+  0.788   1.212   2.049 
